--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -31,8 +31,8 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/error"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginHorizontal="@dimen/padding2x"
             android:layout_marginTop="@dimen/margin4x"
             android:visibility="invisible"
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/no_connection"
+            app:lottie_rawRes="@raw/not_connect"
             app:showWhenError="@{viewModel.movieSearchResult}" />
 
         <ImageView
@@ -100,6 +100,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/margin8dp"
             android:visibility="visible"
+            app:showWhenSuccess="@{viewModel.movieSearchResult}"
             app:items="@{viewModel.movieSearchResult.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
