--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -27,8 +27,22 @@
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/loading"
-            app:showWhenLoading="@{viewModel.stream}"
-            tools:visibility="gone" />
+            app:showWhenLoading="@{viewModel.stream}" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/not_found"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="@dimen/margin4x"
+            android:elevation="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/not_connect"
+            app:showWhenError="@{viewModel.stream}" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
@@ -116,6 +130,7 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_margin="@dimen/margin1x"
+            app:showWhenSuccess="@{viewModel.stream}"
             app:items="@{viewModel.stream.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
