--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -67,6 +67,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="@dimen/margin8dp"
             android:layout_marginHorizontal="@dimen/margin16dp"
+            android:hint="@string/search_dot"
             android:drawableStart="@drawable/ic_baseline_search_24"
             android:drawableTint="@color/secondary_text_color"
             android:textColorHint="@color/secondary_text_color"
