--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/cards_color"/>
-    <item android:drawable="@drawable/video"
+    <item android:drawable="@drawable/ic_play_movie"
         android:gravity="center"
         android:width="90dp"
         android:height="90dp"/>
