fix: edit colors and edit iss_title_background slider

--- a/app/src/main/res/drawable/layout_shape.xml
+++ b/app/src/main/res/drawable/layout_shape.xml
@@ -3,11 +3,9 @@
     android:shape="rectangle">
 
     <gradient
-        android:endColor="#EB000000"
+        android:endColor="@color/end_gradient"
         android:angle="270"
-        android:centerColor="#B71C1C1C"
-        android:startColor="#12000000" />
-
-    <corners android:radius="20dp" />
+        android:centerColor="@color/center_gradient"
+        android:startColor="@color/start_gradient" />
 
 </shape>
