--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        android:paddingBottom="@dimen/margin16dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
