--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:elevation="5dp"
-                app:layout_constraintVertical_bias="0.3"
+                app:layout_constraintVertical_bias="0.22"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,11 +87,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title"
                 app:listener="@{viewModel}"
+                android:shadowColor="@color/start_gradient"
+                app:showWhenSuccess="@{viewModel.tradingMovies}"
+                app:iss_title_background="@drawable/layout_shape"
                 app:setSlider="@{viewModel.tradingMovies.toData().results}"
                 android:clipToPadding="false"
                 app:iss_auto_cycle="true"
                 app:iss_period="1000"
-                app:iss_delay="0"/>
+                app:iss_delay="1"/>
 
             <TextView
                 android:id="@+id/popular_text"
@@ -188,5 +191,6 @@
                 tools:listitem="@layout/item_movies" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
 </layout>
