fix: edit bg colors and lottie

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,8 +3,8 @@
 
     <color name="secondary_text_color">#747AA6</color>
     <color name="cards_color">#27283A</color>
-    <color name="base_color">#E99A27</color>
-    <color name="background_color">#141724</color>
+    <color name="base_color">#E7AC57</color>
+    <color name="background_color">#121420</color>
     <color name="primary_text_color">#FFFFFF</color>
     <color name="icon">#FFFFFF</color>
     <color name="stroke">#242630</color>
