--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="black">#000000</color>
     <color name="secondary_text_color">#8B8B8B</color>
     <color name="cards_color">#FFFFFF</color>
-    <color name="base_color">#E99A27</color>
+    <color name="base_color">#D89D49</color>
     <color name="background_color">#F7F7F7</color>
     <color name="primary_text_color">#393939</color>
     <color name="status_bar_color">#39424A</color>
