--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.home.HomeViewModel" />
+
     </data>
 
     <ScrollView
@@ -38,6 +39,7 @@
                 app:lottie_rawRes="@raw/loading"
                 app:showWhenLoading="@{viewModel.popularMovies}" />
 
+
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/not_found"
                 android:layout_width="200dp"
@@ -52,6 +54,21 @@
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/not_connect"
                 app:showWhenError="@{viewModel.popularMovies}" />
+
+            <Button
+                android:id="@+id/try_again"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/try_again"
+                app:icon="@drawable/ic_baseline_replay_24"
+                android:onClick="@{() -> viewModel.refresh()}"
+                app:showWhenError="@{viewModel.popularMovies}"
+                android:textColor="#747AA6"
+                app:iconTint="#747AA6"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/not_found"/>
 
             <TextView
                 android:id="@+id/title"
