--- a/app/src/main/res/layout/fragment_famous.xml
+++ b/app/src/main/res/layout/fragment_famous.xml
@@ -42,6 +42,21 @@
             app:lottie_rawRes="@raw/not_connect"
             app:showWhenError="@{viewModel.trendingPerson}" />
 
+        <Button
+            android:id="@+id/try_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/try_again"
+            app:icon="@drawable/ic_baseline_replay_24"
+            android:onClick="@{() -> viewModel.refresh()}"
+            app:showWhenError="@{viewModel.trendingPerson}"
+            android:textColor="#747AA6"
+            app:iconTint="#747AA6"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/not_found"/>
+
         <TextView
             android:id="@+id/list_title"
             android:layout_width="wrap_content"
