--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,10 +64,10 @@
             android:layout_height="wrap_content"
             android:text="@string/try_again"
             app:icon="@drawable/ic_baseline_replay_24"
-            app:iconTint="@color/base_color"
+            app:iconTint="@color/purple"
             android:onClick="@{() -> viewModel.refresh()}"
             app:showWhenError="@{viewModel.person}"
-            android:textColor="@color/base_color"
+            android:textColor="@color/purple"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
