--- a/app/src/main/res/layout/fragment_seasons.xml
+++ b/app/src/main/res/layout/fragment_seasons.xml
@@ -68,8 +68,8 @@
             app:icon="@drawable/ic_baseline_replay_24"
             android:onClick="@{() -> viewModel.refresh()}"
             app:showWhenError="@{viewModel.tvDetails}"
-            android:textColor="#747AA6"
-            app:iconTint="#747AA6"
+            android:textColor="@color/purple"
+            app:iconTint="@color/purple"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
