--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="purple">#747AA6</color>
     <color name="secondary_text_color">#8B8B8B</color>
     <color name="cards_color">#FFFFFF</color>
     <color name="base_color">#D89D49</color>
