--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,11 +10,63 @@
 
     </data>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_color"
+        tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:elevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading"
+        app:showWhenLoading="@{viewModel.popularMovies}" />
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/not_found"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:elevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/not_connect"
+        app:showWhenError="@{viewModel.popularMovies}" />
+
+    <Button
+        android:id="@+id/try_again"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/try_again"
+        app:icon="@drawable/ic_baseline_replay_24"
+        android:onClick="@{() -> viewModel.refresh()}"
+        app:showWhenError="@{viewModel.popularMovies}"
+        android:textColor="@color/purple"
+        app:iconTint="@color/purple"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/not_found"/>
+
+
     <ScrollView
         android:id="@+id/sub_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
+        app:showWhenSuccess="@{viewModel.popularMovies}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,52 +75,6 @@
             android:layout_height="wrap_content"
             android:background="@color/background_color"
             tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">
-
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/loading"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:elevation="5dp"
-                app:layout_constraintBottom_toTopOf="@+id/upcoming_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.3"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/loading"
-                app:showWhenLoading="@{viewModel.popularMovies}" />
-
-
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/not_found"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:elevation="5dp"
-                app:layout_constraintVertical_bias="0.22"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/not_connect"
-                app:showWhenError="@{viewModel.popularMovies}" />
-
-            <Button
-                android:id="@+id/try_again"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/try_again"
-                app:icon="@drawable/ic_baseline_replay_24"
-                android:onClick="@{() -> viewModel.refresh()}"
-                app:showWhenError="@{viewModel.popularMovies}"
-                android:textColor="@color/purple"
-                app:iconTint="@color/purple"
-                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/not_found"/>
 
             <TextView
                 android:id="@+id/title"
@@ -209,4 +215,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
